Attempt to fix icons on safari mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -92,6 +92,7 @@ body div {
 .icon {
     filter: invert(1);
     margin: 0 2vw;
+    align-self: center;
 }
 
 .icon:hover {
